test/pass/no_newline_at_end.ly
<@lily integer i = 10 @>