test/fail/bad_comma.ly
<@lily integer a    a = 10, @>
